src/main/resources/styles/main.css
.fieldeditortoppane {
    -fx-border-radius: 0px;
    -fx-border-color: #d8d8d8;
    -fx-border-insets: 0px;
    -fx-border-style: solid;
    -fx-border-width: 0px;
    -fx-padding: 25 25 25 25;
    -fx-alignment: center;
    -fx-background-color: #ffffff;
}

#fieldEditorPane {
    -fx-border-radius: 1px;
    -fx-border-color: #d8d8d8;
    -fx-border-insets: 0px;
    -fx-border-style: solid;
    -fx-border-width: 1px;
    -fx-padding: 25 25 25 25;
    -fx-alignment: center;
    -fx-background-color: #ffffff;
}

#fieldEditorTopPane {
    -fx-background-color: #f4f4f4; //#ececec;
}

.fieldeditorscrollpane {
    -fx-background-color: #f4f4f4; //#ececec;
    -fx-border-radius: 0px;
    -fx-border-color: #d8d8d8;
    -fx-border-insets: 0px;
    -fx-border-style: solid;
    -fx-border-width: 0px;
    -fx-padding: 0 0 0 0;
    -fx-alignment: center;
    -fx-fit-to-width: true;
    -fx-fit-to-height: true;
    -fx-pannable: false;
    -fx-hbar-policy: as-needed; //	[ never | always | as-needed ]	1
    -fx-vbar-policy: as-needed; //	[ never | always | as-needed ]	1
}

.begrouptoppane {
    -fx-padding: 25 25 25 25;
    -fx-background-color: #f4f4f4; //#ececec;
}

.begroupscrollpane {
    -fx-background-color: #f4f4f4; //#ececec;
    -fx-border-radius: 0px;
    -fx-border-color: #d8d8d8;
    -fx-border-insets: 0px;
    -fx-border-style: solid;
    -fx-border-width: 0px;
    -fx-padding: 0 0 0 0;
    -fx-alignment: center;
    -fx-fit-to-width: true;
    -fx-fit-to-height: true;
    -fx-pannable: false;
    -fx-hbar-policy: as-needed; //	[ never | always | as-needed ]	1
    -fx-vbar-policy: as-needed; //	[ never | always | as-needed ]	1
}

.begroupstackpane {
    -fx-background-color: #ffffff;
    -fx-border-radius: 1px;
    -fx-border-style: solid;
    -fx-border-width: 1px;
    -fx-border-color: #d8d8d8;
    -fx-font-family: PTMono;
    -fx-font-size: 14px;
    -fx-font-weight: normal;
    -fx-font-style: normal;
    -fx-font-stretch: normal;
    -fx-color: #4b4b4b;
    -fx-fit-to-width: true;
    -fx-fit-to-height: true;
}

.protocolgrid {
    -fx-background-color: #ffffff;
    -fx-border-width: 0px;
}

.titled-pane {
    -fx-border-radius: 1px;
    -fx-border-color: #d8d8d8;
    -fx-border-insets: 0px;
    -fx-border-style: solid;
    -fx-border-width: 1px;
}

.titled-pane .content {
    -fx-border-width: 0px;
}

.titled-pane .title {
    -fx-background-color: #f4f4f4;
    -fx-pref-height: 30px;
    -fx-font-family: Verdana;
    -fx-font-size: 14px;
    -fx-font-weight: bold;
    -fx-font-style: normal;
    -fx-font-stretch: normal;
    -fx-color: #4b4b4b;
}

.invalid-protocol .title {
    -fx-background-color: #dbbaba;
}

.titled-pane .arrow-button {
    -fx-font-family: System;
    -fx-font-size: 14px;
    -fx-font-weight: normal;
    -fx-font-style: normal;
    -fx-font-stretch: normal;
}

.append-protocol .title {
    -fx-background-color: WHITE;
    -fx-color: WHITE;
    -fx-font-weight: normal;
    -fx-font-style: italic;
}

.ignored-field {
    -fx-text-fill: grey;
}

.stackpane {
    -fx-border-radius: 0px;
    -fx-border-color: #d8d8d8;
    -fx-border-insets: 0px;
    -fx-border-style: solid;
    -fx-border-width: 0px;
    -fx-padding: 0 0 0 0;
    -fx-alignment: center;
}

.binary-field {
    -fx-text-box-border: transparent;
    -fx-focus-color: transparent;
    -fx-faint-focus-color: transparent;
    -fx-border-radius: 10;
    -fx-background-radius: 10;
}

.binary-field.selected {
    -fx-background-color: #33adff;
}

.protocol-row {
    -fx-background-color: #f4f4f4;
    -fx-pref-height: 30px;
    -fx-padding: 8 0 7 0px;
}

.field-row {
    -fx-background-color: #ffffff;
    /*-fx-pref-height: 50px;*/
    -fx-min-height: 30px;
    -fx-padding: 8 0 7 40px;
    -fx-fill-height: true;
    -fx-fill-width: true;
}

.field-row-raw {
    -fx-background-color: #ffffff;
    -fx-pref-height: 220px;
    -fx-padding: 0 0 7 40px;
}

.field-row-raw-head {
    -fx-background-color: #ffffff;
    -fx-pref-height: 50px;
    -fx-min-height: 50px;
    -fx-padding: 8 0 7 40px;
}

.field-row-raw-value {
    -fx-pref-width: 340px;
    -fx-pref-height: 220px;
    -fx-min-width: 340px;
    -fx-min-height: 220px;
    -fx-border-radius: 1px;
    -fx-border-color: #d8d8d8;
    -fx-border-insets: 0px;
    -fx-border-style: solid;
    -fx-border-width: 1px;
    -fx-padding: 0 0 0 0;
    /*-fx-fill-height: true;
    -fx-fill-width: true;*/
}

.field-row-raw-button {
    -fx-padding: 5 5 5 5;
}

.protocol-name {
    -fx-fill: #000000;
    -fx-font-style: oblique;
    -fx-font-size: 14px;
}

.control {
    -fx-pref-width: 180px;
}

.hyperlink .text{
    -fx-underline: false;
}

.text-area {
    -fx-pref-width: 360px;
    -fx-pref-height: 200px;
}

.title-pane {
    -fx-fit-to-height: true;
    -fx-min-width: 300px;
}

.field-row.value-pane {
    -fx-fit-to-height: true;
}

.editable-label:editable {
    -fx-background-color: #33adff;
}

/*
.scroll-pane > .viewport {
    -fx-background-color: transparent;
}

.scroll-pane {
    -fx-background-color: white;
}
*/

.field-label-info {
    -fx-pref-width: 150px;
    -fx-font-family: Monospaced;
}

.field-label-name {
    -fx-pref-width: 250px;
}

.field-label-name .indented {
    -fx-text-fill: grey;
}

.field-value-default {
    -fx-text-fill: grey;
}

.payloadhbox {
    -fx-min-height: 30px;
    -fx-pref-height: 30px;
    -fx-min-width: 300px;
    -fx-pref-width: 300px;
    -fx-spacing: 7px;
}

.payloadchoice {
    -fx-min-height: 30px;
    -fx-pref-height: 30px;
}

.payloadbutton {
    -fx-min-height: 30px;
    -fx-pref-height: 30px;
    -fx-min-width: 80px;
}

